2013-01-20  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Fixed validating the argument for splitting parts
        by frame/field numbers. Fixes #835.

        * Released v6.0.0.

2013-01-14  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented splitting by parts based on
        frame/field numbers ("--split parts-frames:" in
        mkvmerge). Implements #819.

2013-01-13  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Re-writing the track headers after they'd
        grown a lot (to more than the EBML void size located after them
        allowed for) led to an integer underflow. Then mkvmerge tried to
        write a void element the size of that integer (e.g. nearly 4 GB on
        32bit platforms). Fixes #822 and #828.

2013-01-12  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix in the MP4 reader: Fixed language code
        conversion from what is used in MP4 to the ISO 639-2 codes used in
        Matroska (e.g. convert from "deu" to "ger").

        * Source distribution: source code archives (tarballs) will be
        compressed with xz instead of bzip2 from now on. The file name's
        extension will therefore change from ".tar.bz2" to ".tar.xz". The
        download URL changes accordingly.

2013-01-11  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented reading VobSubs from MP4
        files if they're stored in the Nero Digital way (track sub-type
        'mp4s', ESDS object type identifier 0xe0). Implements #821 and the
        second half of #815.

2013-01-08  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: Command line options can be saved as default
        for new jobs by clicking a check box in the "add command line
        options" dialog.

2013-01-02  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Fixed a crash in the chapter editor if the root
        was selected and the user used the "Set values" button.
