@@ -1,0 +1,5 @@
+#!/usr/bin/ruby -w
+
+# T_386flv_vp6f
+describe "mkvmerge / FLV with VP6F video"
+test_merge "data/flv/vp6-mp3-1.flv"
