@@ -1,3 +1,8 @@
+2013-01-21  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: Fixed reading VP6 video from FlashVideo
+        files. Fixes #836.
+
 2013-01-20  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: bug fix: Fixed validating the argument for splitting parts
